# ConvDog

./: .gitignore  .python-version  CMakeLists.txt  main.py  pyproject.toml
convdog/: __main__.py
convdog/core/: graph.py  typing_extension.py
convdog/optimizer/: O0.py  O1.py  O2.py  O3.py
convdog/quantizer/: fp16.py
convdog/simplifier/: base_pass.py  dead_code_elimination_pass.py  eliminate_concat_split_pass.py  fuse_attention_default_backend.py  fuse_consecutive_node_pass.py  fuse_conv_default_backend.py  fuse_conv_pass.py  fuse_gelu_pass.py  fuse_gemm_pass.py  fuse_layernorm_pass.py  fuse_multiple_gather_pass.py  inverse_op_node_pass.py
convdog/tools/: debug_onnx_node.py
convdog/utils/: logger.py  stats.py
tests/: test_inject_info.py
