[project]
name = "convdog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "numpy>=2.0",
    "onnx>=1.20.0",
    "onnxruntime>=1.23.2",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "cmake>=4.2.1",
    "pybind11>=3.0.1",
]

[tool.setuptools.packages.find]
include = ["convdog*"]
exclude = ["logs*", "tests*", "docs*"]
